cmd/hw1/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw1-app
  template:
    metadata:
      labels:
        app: hw1-app
    spec:
      containers:
        - name: hw1-app
#          For local debug only
#          imagePullPolicy: Never
          image: wittlich/arch-course-hw1:v1
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
