cmd/hw1/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw1-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/health/?$ /health break;
      rewrite ^/otusapp/(\w+)/.* /student/$1 break;
      return 404;
spec:
  rules:
    - host: arch.homework
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hw1-service
              port:
                number: 8000
